Agregado de tooltip y translation para mensaje del tooltip en menubar

--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ body {
   background-color: rgba(100, 100, 100, 0.3);
   box-shadow: 0px 0px 5px rgba(100, 100, 100, 0.3);
   color: #41FDFD66;
+  cursor: default;
 }
 
 .section-component {
@@ -135,4 +136,46 @@ body {
         width: calc(100% - 1em);
         margin-top: 0.5em;
     }
+}
+
+.tooltip-wrapper {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    margin-right: 0.2em;
+}
+
+.tooltiptext {
+    visibility: hidden;
+    width: 140px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    transform: translateX(-45%);
+    opacity: 0;
+    transition: opacity 0.3s;
+    pointer-events: none;
+    border: 1px solid #707070FF;
+    font-size: 13px;
+}
+
+.tooltiptext::after {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    border-width: 5px;
+    border-style: solid;
+    border-color: #707070FF transparent transparent transparent;
+}
+
+.tooltip-wrapper:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
 }
